app/packages/pocket_tts_raven/third_party/raven/include/pocket_tts.h

/* ── Engine lifecycle ──────────────────────────────────────────────────── */

/* Create an engine. Returns NULL on failure (details on stderr).
 *   precision:   "int8" (recommended) or "fp32"
 *   temperature: sampling temperature (0 = deterministic, ~0.7 typical)
 *   lsd_steps:   flow-matching steps (1 = fastest, uses the merged model)
 *   num_threads: total thread budget (0 = half the cores)               */
void* ptt_create(const char* models_dir, const char* voices_dir,
                 const char* tokenizer_path, const char* precision,
                 float temperature, int lsd_steps, int num_threads);
/* ptt_create with a flags word for special engine modes:
 *   bit 0: decoder_only  — loads just the Mimi decoder (see ptt_decode)
 *   bit 1: defer_encoder — skip the voice encoder until ptt_load_encoder
 *   bit 2: encoder_only  — loads just the voice encoder (ptt_encode_voice) */
void* ptt_create_ex(const char* models_dir, const char* voices_dir,
                    const char* tokenizer_path, const char* precision,
                    float temperature, int lsd_steps, int num_threads,
                    int flags);
/* ptt_create that also writes ONNX Runtime per-op profile JSON files
 * into profile_dir (flushed when the engine is destroyed).             */
void* ptt_create_profiled(const char* models_dir, const char* voices_dir,
                          const char* tokenizer_path, const char* precision,
                          float temperature, int lsd_steps, int num_threads,
                          const char* profile_dir);
void ptt_destroy(void* handle);
/* Run a dummy generation to warm caches/kernels. Returns elapsed ms.   */
double ptt_warmup(void* handle);
/* ── Runtime configuration ─────────────────────────────────────────────── */

void ptt_set_temperature(void* handle, float temperature);
/* soften=1 (default) replaces , ; : with spaces before synthesis;
 * soften=0 lets the model voice its own clause pauses (better for prose). */
void ptt_set_soften_commas(void* handle, int soften);
/* Max latent frames per decoder batch (default 15; 80ms audio each).   */
void ptt_set_max_chunk(void* handle, int frames);
/* Must be called BEFORE the first ptt_create* on WASM builds: size of the
 * shared ORT thread pool and whether idle workers spin-wait (spin=1).   */
void ptt_configure_pool(int threads, int spin);
/* ── Streaming synthesis ───────────────────────────────────────────────── */

/* Start synthesizing text with a voice (filename inside voices_dir, or a
 * name whose .emb is already cached). Returns a stream context or NULL. */
void* ptt_stream_start(void* handle, const char* text, const char* voice);
/* Blocking read: 1 = wrote a chunk (free with ptt_free_audio),
 * 0 = stream finished. Waits for the next chunk when none is ready.    */
int ptt_stream_read(void* stream_ctx, float** out_samples, int* out_len);
/* Non-blocking variant: additionally returns -1 when nothing is
 * available yet. Use this when the calling thread must not block
 * (e.g. the Emscripten runtime thread).                                 */
int ptt_stream_poll(void* stream_ctx, float** out_samples, int* out_len);
/* [guten-speak patch: stream terminal-error contract]
 * Query the terminal error state of a stream. Valid at any time before
 * ptt_stream_end(); most useful once ptt_stream_read/poll has returned 0.
 * Returns the terminal error code: 0 = none (still running or clean end),
 * >0 = the stream ended because generation threw. When msg_buf is non-NULL
 * and msg_buf_len > 0, copies up to msg_buf_len-1 bytes of a bounded UTF-8
 * message plus a NUL terminator. Returns -1 for a NULL/invalid context.  */
int ptt_stream_error(void* stream_ctx, char* msg_buf, int msg_buf_len);
/* Request a graceful abort; generation stops within one decode batch.
 * Does not join or free — follow with ptt_stream_end.                   */
void ptt_stream_stop(void* stream_ctx);
/* Join and free the stream context (aborts first if still running).    */
void ptt_stream_end(void* stream_ctx);
void ptt_free_audio(float* samples);
/* Synchronous decode for decoder_only engines: latents[frames*32] in,
 * malloc'd samples out (free with ptt_free_audio). Decoder state
 * persists across calls until ptt_decoder_reset. Returns 0 / -1.        */
int ptt_decode(void* handle, const float* latents, int frames,
               float** out_samples, int* out_len);
/* ── Voice encoding ────────────────────────────────────────────────────── */

/* defer_encoder engines: load the encoder session once the model file
 * exists in models_dir. Returns 0 / -1.                                 */
int ptt_load_encoder(void* handle);
/* Encode a voice file to its cached .emb (voices_dir/.cache/<name>.emb).
 * Works on encoder_only engines. Returns 0 / -1.                        */
int ptt_encode_voice(void* handle, const char* voice);