app/packages/pocket_tts_raven/lib/pocket_tts_raven_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for the vendored Pocket TTS Raven C API (`third_party/raven/include/pocket_tts.h`).
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class PocketTtsRavenBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  PocketTtsRavenBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  PocketTtsRavenBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Create an engine. Returns NULL on failure (details on stderr).
  /// precision:   "int8" (recommended) or "fp32"
  /// temperature: sampling temperature (0 = deterministic, ~0.7 typical)
  /// lsd_steps:   flow-matching steps (1 = fastest, uses the merged model)
  /// num_threads: total thread budget (0 = half the cores)
  ffi.Pointer<ffi.Void> ptt_create(
    ffi.Pointer<ffi.Char> models_dir,
    ffi.Pointer<ffi.Char> voices_dir,
    ffi.Pointer<ffi.Char> tokenizer_path,
    ffi.Pointer<ffi.Char> precision,
    double temperature,
    int lsd_steps,
    int num_threads,
  ) {
    return _ptt_create(
      models_dir,
      voices_dir,
      tokenizer_path,
      precision,
      temperature,
      lsd_steps,
      num_threads,
    );
  }

  late final _ptt_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Float,
            ffi.Int,
            ffi.Int,
          )
        >
      >('ptt_create');
  late final _ptt_create = _ptt_createPtr
      .asFunction<
        ffi.Pointer<ffi.Void> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          double,
          int,
          int,
        )
      >();

  /// ptt_create with a flags word for special engine modes:
  /// bit 0: decoder_only  — loads just the Mimi decoder (see ptt_decode)
  /// bit 1: defer_encoder — skip the voice encoder until ptt_load_encoder
  /// bit 2: encoder_only  — loads just the voice encoder (ptt_encode_voice)
  ffi.Pointer<ffi.Void> ptt_create_ex(
    ffi.Pointer<ffi.Char> models_dir,
    ffi.Pointer<ffi.Char> voices_dir,
    ffi.Pointer<ffi.Char> tokenizer_path,
    ffi.Pointer<ffi.Char> precision,
    double temperature,
    int lsd_steps,
    int num_threads,
    int flags,
  ) {
    return _ptt_create_ex(
      models_dir,
      voices_dir,
      tokenizer_path,
      precision,
      temperature,
      lsd_steps,
      num_threads,
      flags,
    );
  }

  late final _ptt_create_exPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Float,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('ptt_create_ex');
  late final _ptt_create_ex = _ptt_create_exPtr
      .asFunction<
        ffi.Pointer<ffi.Void> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          double,
          int,
          int,
          int,
        )
      >();

  /// ptt_create that also writes ONNX Runtime per-op profile JSON files
  /// into profile_dir (flushed when the engine is destroyed).
  ffi.Pointer<ffi.Void> ptt_create_profiled(
    ffi.Pointer<ffi.Char> models_dir,
    ffi.Pointer<ffi.Char> voices_dir,
    ffi.Pointer<ffi.Char> tokenizer_path,
    ffi.Pointer<ffi.Char> precision,
    double temperature,
    int lsd_steps,
    int num_threads,
    ffi.Pointer<ffi.Char> profile_dir,
  ) {
    return _ptt_create_profiled(
      models_dir,
      voices_dir,
      tokenizer_path,
      precision,
      temperature,
      lsd_steps,
      num_threads,
      profile_dir,
    );
  }

  late final _ptt_create_profiledPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Float,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('ptt_create_profiled');
  late final _ptt_create_profiled = _ptt_create_profiledPtr
      .asFunction<
        ffi.Pointer<ffi.Void> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          double,
          int,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void ptt_destroy(ffi.Pointer<ffi.Void> handle) {
    return _ptt_destroy(handle);
  }

  late final _ptt_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'ptt_destroy',
      );
  late final _ptt_destroy = _ptt_destroyPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Run a dummy generation to warm caches/kernels. Returns elapsed ms.
  double ptt_warmup(ffi.Pointer<ffi.Void> handle) {
    return _ptt_warmup(handle);
  }

  late final _ptt_warmupPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Pointer<ffi.Void>)>>(
        'ptt_warmup',
      );
  late final _ptt_warmup = _ptt_warmupPtr
      .asFunction<double Function(ffi.Pointer<ffi.Void>)>();

  /// ── Runtime configuration ───────────────────────────────────────────────
  void ptt_set_temperature(ffi.Pointer<ffi.Void> handle, double temperature) {
    return _ptt_set_temperature(handle, temperature);
  }

  late final _ptt_set_temperaturePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Float)>
      >('ptt_set_temperature');
  late final _ptt_set_temperature = _ptt_set_temperaturePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, double)>();

  /// soften=1 (default) replaces , ; : with spaces before synthesis;
  /// soften=0 lets the model voice its own clause pauses (better for prose).
  void ptt_set_soften_commas(ffi.Pointer<ffi.Void> handle, int soften) {
    return _ptt_set_soften_commas(handle, soften);
  }

  late final _ptt_set_soften_commasPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('ptt_set_soften_commas');
  late final _ptt_set_soften_commas = _ptt_set_soften_commasPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  /// Max latent frames per decoder batch (default 15; 80ms audio each).
  void ptt_set_max_chunk(ffi.Pointer<ffi.Void> handle, int frames) {
    return _ptt_set_max_chunk(handle, frames);
  }

  late final _ptt_set_max_chunkPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('ptt_set_max_chunk');
  late final _ptt_set_max_chunk = _ptt_set_max_chunkPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  /// Must be called BEFORE the first ptt_create* on WASM builds: size of the
  /// shared ORT thread pool and whether idle workers spin-wait (spin=1).
  void ptt_configure_pool(int threads, int spin) {
    return _ptt_configure_pool(threads, spin);
  }

  late final _ptt_configure_poolPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int)>>(
        'ptt_configure_pool',
      );
  late final _ptt_configure_pool = _ptt_configure_poolPtr
      .asFunction<void Function(int, int)>();

  /// Start synthesizing text with a voice (filename inside voices_dir, or a
  /// name whose .emb is already cached). Returns a stream context or NULL.
  ffi.Pointer<ffi.Void> ptt_stream_start(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Char> voice,
  ) {
    return _ptt_stream_start(handle, text, voice);
  }

  late final _ptt_stream_startPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('ptt_stream_start');
  late final _ptt_stream_start = _ptt_stream_startPtr
      .asFunction<
        ffi.Pointer<ffi.Void> Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Blocking read: 1 = wrote a chunk (free with ptt_free_audio),
  /// 0 = stream finished. Waits for the next chunk when none is ready.
  int ptt_stream_read(
    ffi.Pointer<ffi.Void> stream_ctx,
    ffi.Pointer<ffi.Pointer<ffi.Float>> out_samples,
    ffi.Pointer<ffi.Int> out_len,
  ) {
    return _ptt_stream_read(stream_ctx, out_samples, out_len);
  }

  late final _ptt_stream_readPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Pointer<ffi.Float>>,
            ffi.Pointer<ffi.Int>,
          )
        >
      >('ptt_stream_read');
  late final _ptt_stream_read = _ptt_stream_readPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Pointer<ffi.Float>>,
          ffi.Pointer<ffi.Int>,
        )
      >();

  /// Non-blocking variant: additionally returns -1 when nothing is
  /// available yet. Use this when the calling thread must not block
  /// (e.g. the Emscripten runtime thread).
  int ptt_stream_poll(
    ffi.Pointer<ffi.Void> stream_ctx,
    ffi.Pointer<ffi.Pointer<ffi.Float>> out_samples,
    ffi.Pointer<ffi.Int> out_len,
  ) {
    return _ptt_stream_poll(stream_ctx, out_samples, out_len);
  }

  late final _ptt_stream_pollPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Pointer<ffi.Float>>,
            ffi.Pointer<ffi.Int>,
          )
        >
      >('ptt_stream_poll');
  late final _ptt_stream_poll = _ptt_stream_pollPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Pointer<ffi.Float>>,
          ffi.Pointer<ffi.Int>,
        )
      >();

  /// [guten-speak patch: stream terminal-error contract]
  /// Query the terminal error state of a stream. Valid at any time before
  /// ptt_stream_end(); most useful once ptt_stream_read/poll has returned 0.
  /// Returns the terminal error code: 0 = none (still running or clean end),
  /// >0 = the stream ended because generation threw. When msg_buf is non-NULL
  /// and msg_buf_len > 0, copies up to msg_buf_len-1 bytes of a bounded UTF-8
  /// message plus a NUL terminator. Returns -1 for a NULL/invalid context.
  int ptt_stream_error(
    ffi.Pointer<ffi.Void> stream_ctx,
    ffi.Pointer<ffi.Char> msg_buf,
    int msg_buf_len,
  ) {
    return _ptt_stream_error(stream_ctx, msg_buf, msg_buf_len);
  }

  late final _ptt_stream_errorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
          )
        >
      >('ptt_stream_error');
  late final _ptt_stream_error = _ptt_stream_errorPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, int)
      >();

  /// Request a graceful abort; generation stops within one decode batch.
  /// Does not join or free — follow with ptt_stream_end.
  void ptt_stream_stop(ffi.Pointer<ffi.Void> stream_ctx) {
    return _ptt_stream_stop(stream_ctx);
  }
